added extra 4 section on home & ToyDetailes

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,10 @@
 @import "tailwindcss";
 @plugin "daisyui";
 
+.body {
+  /* background: linear-gradient(135deg, #a1c4fd 0%, #c2e9fb 100%); */
+  background: linear-gradient(135deg, #fbc2eb 0%, #a6c1ee 100%);
+  /* background: linear-gradient(135deg, #d4fc79 0%, #96e6a1 100%); */
+  /* background: linear-gradient(135deg, #89f7fe 0%, #66a6ff 100%); */
 
+}
